[project]
name = "crossd_metrics"
version = "2.3.1"
description = ""
authors = [
    {name = "", email = ""},
]
dependencies = [
    "gql>=3.5.3",
    "python-dotenv>=1.1.0",
    "beautifulsoup4>=4.13.4",
    "rich>=14.0.0",
    "PyGithub>=1.59.1",
    "requests-toolbelt>=1.0.0",
    "html5lib>=1.1",
    "GitPython>=3.1.44",
    "python-dateutil>=2.9.0.post0",
]
requires-python = ">=3.13"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
